--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -3,5 +3,7 @@
     <declare-styleable name="TouchableImageView">
         <attr name="dot_radius" format="integer"/>
         <attr name="dot_color" format="color"/>
+        <attr name="source_dot_radius" format="integer"/>
+        <attr name="source_dot_color" format="color"/>
     </declare-styleable>
 </resources>
