--- a/app/src/main/res/layout/drawer_content.xml
+++ b/app/src/main/res/layout/drawer_content.xml
@@ -5,14 +5,11 @@
     tools:showIn="@layout/fragment_drawer"
     >
 
-    <LinearLayout
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycleView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        >
-
-        <!-- TODO: items -->
-
-    </LinearLayout>
+        tools:listitem="@layout/drawer_item"
+        />
 
 </layout>
