--- a/app/src/main/res/layout/drawer_item.xml
+++ b/app/src/main/res/layout/drawer_item.xml
@@ -4,6 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     >
 
+    <data>
+
+        <variable
+            name="item"
+            type="com.nikolaykul.waveadvance.item.PropertyItem"
+            />
+
+    </data>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/view_height_small"
@@ -13,12 +22,15 @@
         <TextView
             android:id="@+id/tv_name"
             style="@style/AppTheme.DrawerItem"
+            android:text="@{item.name}"
             tools:text="Lambda"
             />
 
         <com.rengwuxian.materialedittext.MaterialEditText
             android:id="@+id/et_value"
             style="@style/AppTheme.DrawerItem"
+            android:text='@{item.value + ""}'
+            tools:text="123"
             />
 
     </LinearLayout>
