Move PropertyItem into another package and rename it into just Property.

--- a/app/src/main/res/layout/item_properties.xml
+++ b/app/src/main/res/layout/item_properties.xml
@@ -8,7 +8,7 @@
 
         <variable
             name="item"
-            type="com.nikolaykul.waveadvance.item.PropertyItem"
+            type="com.nikolaykul.waveadvance.data.properties.Property"
             />
 
     </data>
