Change item_properties.xml's name.

--- a/app/src/main/res/layout/fragment_properties.xml
+++ b/app/src/main/res/layout/fragment_properties.xml
@@ -40,7 +40,7 @@
             android:id="@+id/recycleView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:listitem="@layout/item_properties"
+            tools:listitem="@layout/item_property"
             />
 
     </LinearLayout>
