--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -6,4 +6,10 @@
         <attr name="source_dot_radius" format="integer"/>
         <attr name="source_dot_color" format="color"/>
     </declare-styleable>
+    <declare-styleable name="DrawableImageView">
+        <attr name="line_color" format="float"/>
+        <attr name="line_size" format="float"/>
+        <attr name="ruler_color" format="float"/>
+        <attr name="ruler_text_size" format="float"/>
+    </declare-styleable>
 </resources>
