--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,6 +41,26 @@
                     >
 
                     <TextView
+                        android:id="@+id/tv_source_x"
+                        style="@style/AppTheme.MainTextView"
+                        tools:text="X = 12321.213231"
+                        />
+
+                    <TextView
+                        android:id="@+id/tv_source_y"
+                        style="@style/AppTheme.MainTextView"
+                        tools:text="Y = 12321.213231"
+                        />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/view_height_small"
+                    android:orientation="horizontal"
+                    >
+
+                    <TextView
                         android:id="@+id/tv_x"
                         style="@style/AppTheme.MainTextView"
                         tools:text="X = 12321.213231"
@@ -53,12 +73,6 @@
                         />
 
                 </LinearLayout>
-
-                <TextView
-                    android:id="@+id/tv_result"
-                    style="@style/AppTheme.MainTextView"
-                    android:layout_height="@dimen/view_height_small"
-                    />
 
             </android.support.design.widget.AppBarLayout>
 
