--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,4 +16,7 @@
     <!-- Padding -->
     <dimen name="padding_normal">16dp</dimen>
 
+    <!-- Margin -->
+    <dimen name="margin_normal">16dp</dimen>
+
 </resources>
