--- a/app/src/main/res/values/styles_main.xml
+++ b/app/src/main/res/values/styles_main.xml
@@ -8,6 +8,8 @@
         <item name="android:gravity">center</item>
         <item name="android:maxLines">1</item>
         <item name="android:singleLine">true</item>
+        <item name="android:layout_marginLeft">@dimen/margin_normal</item>
+        <item name="android:layout_marginRight">@dimen/margin_normal</item>
     </style>
 
 </resources>
