--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,19 +57,22 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/view_height_small"
+                    android:paddingBottom="@dimen/padding_small"
                     android:orientation="horizontal"
                     >
 
-                    <TextView
-                        android:id="@+id/tv_x"
+                    <Button
+                        android:id="@+id/btn_show_u"
                         style="@style/AppTheme.MainTextView"
-                        tools:text="X = 12321.213231"
+                        android:background="@drawable/button_effect"
+                        android:text="@string/show_u"
                         />
 
-                    <TextView
-                        android:id="@+id/tv_y"
+                    <Button
+                        android:id="@+id/btn_show_v"
                         style="@style/AppTheme.MainTextView"
-                        tools:text="Y = 12321.213231"
+                        android:background="@drawable/button_effect"
+                        android:text="@string/show_v"
                         />
 
                 </LinearLayout>
@@ -106,9 +109,9 @@
 
             <fragment
                 android:id="@+id/drawerFragment"
+                android:name="com.nikolaykul.waveadvance.ui.properties.PropertiesFragment"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:name="com.nikolaykul.waveadvance.ui.properties.PropertiesFragment"
                 tools:layout="@layout/fragment_properties"
                 />
 
