--- a/app/src/main/res/values/styles_main.xml
+++ b/app/src/main/res/values/styles_main.xml
@@ -10,6 +10,7 @@
         <item name="android:singleLine">true</item>
         <item name="android:layout_marginLeft">@dimen/margin_normal</item>
         <item name="android:layout_marginRight">@dimen/margin_normal</item>
+        <item name="android:background">@android:color/transparent</item>
     </style>
 
 </resources>
