--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,25 +34,12 @@
                     app:layout_scrollFlags="scroll"
                     />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
+                <TextView
+                    android:id="@+id/tv_max"
                     android:layout_height="@dimen/view_height_small"
-                    android:orientation="horizontal"
-                    >
-
-                    <TextView
-                        android:id="@+id/tv_source_x"
-                        style="@style/AppTheme.MainTextView"
-                        tools:text="X = 12321.213231"
-                        />
-
-                    <TextView
-                        android:id="@+id/tv_source_y"
-                        style="@style/AppTheme.MainTextView"
-                        tools:text="Y = 12321.213231"
-                        />
-
-                </LinearLayout>
+                    style="@style/AppTheme.MainTextView"
+                    tools:text="Max U = 12321.213231"
+                    />
 
                 <LinearLayout
                     android:layout_width="match_parent"
