--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,18 +67,19 @@
             </android.support.design.widget.AppBarLayout>
 
             <com.nikolaykul.waveadvance.view.DrawableImageView
-                android:id="@+id/drawable_image_view"
+                android:id="@+id/iv_drawable"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/view_height_big"
                 android:background="@color/purple"
                 />
 
             <com.nikolaykul.waveadvance.view.TouchableImageView
-                android:id="@+id/imageView"
+                android:id="@+id/iv_touchable"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@android:color/black"
                 app:dot_color="@color/colorPrimary"
+                app:source_dot_color="@color/colorAccent"
                 app:dot_radius="20"
                 />
 
