Add menu action.

--- a/app/src/main/res/drawable/ic_play.xml
+++ b/app/src/main/res/drawable/ic_play.xml
@@ -9,7 +9,7 @@
 
     <path
         android:fillColor="#ffff"
-        android:pathData="M6,6h12v12H6z"
+        android:pathData="M8,5v14l11,-7z"
         />
 
 </vector>
