--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,9 +5,16 @@
     >
 
     <item
+        android:id="@+id/action_resume"
+        android:icon="@drawable/ic_play"
+        android:title="@string/action_resume"
+        app:showAsAction="ifRoom"
+        />
+
+    <item
         android:id="@+id/action_stop"
-        android:title="@string/action_stop"
         android:icon="@drawable/ic_stop"
+        android:title="@string/action_stop"
         app:showAsAction="ifRoom"
         />
 
